# solana-vanity-wallet

./: .gitignore  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  TESTING.md  install.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
