[package]
name = "solana-vanity-wallet"
version = "0.1.0"
edition = "2021"
authors = ["Solana Vanity Wallet Contributors"]
description = "A fast and efficient Solana vanity wallet generator with real-time statistics"
license = "MIT"
repository = "https://github.com/ljacob/solana-vanity-wallet"
keywords = ["solana", "vanity", "wallet", "generator", "cryptocurrency"]
categories = ["cryptography", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "solana-vanity-wallet"
path = "src/main.rs"

[lib]
name = "solana_vanity_wallet"
path = "src/lib.rs"

[dependencies]
solana-sdk = "1.18"
bip39 = "2.0"
bs58 = "0.5"
rand = "0.8"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
