[package]
name = "solana-vanity-wallet"
version = "0.2.1"
edition = "2021"
authors = ["Solana Vanity Wallet Contributors"]
description = "A fast and efficient Solana vanity wallet generator with real-time statistics"
license = "MIT"
repository = "https://github.com/ljacob/solana-vanity-wallet"
keywords = ["solana", "vanity", "wallet", "generator", "cryptocurrency"]
categories = ["cryptography", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "solana-vanity-wallet"
path = "src/main.rs"

[lib]
name = "solana_vanity_wallet"
path = "src/lib.rs"

[dependencies]
solana-sdk = "2.3"
bip39 = "2.0"
bs58 = "0.5"
slip10 = "0.4"
rand = "0.8"
rayon = "1.8"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"

# Windows-specific OpenSSL vendoring for CI builds
[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# Note: There are known security vulnerabilities in curve25519-dalek v3.2.1 and ed25519-dalek v1.0.1
# These are pulled in by solana-sdk dependencies and cannot be easily overridden without breaking compatibility
# See: RUSTSEC-2024-0344 and RUSTSEC-2022-0093
# Impact: Minimal for this application as we don't expose the vulnerable signing APIs
